# alfred

./: .env.example  .gitguardian.yaml  .gitignore  ATTRIBUTION.md  CLAUDE.md  LICENSE  NOTICE  README.md  config.instance.yaml.example  config.kalle.yaml.example  config.stayc-clinical.yaml.example  config.yaml.example  instances.yaml.example  pyproject.toml  v0.1.9-post.txt  v0.3.0-substack-note.md  v0.3.1-substack-note.md
.claude/: live-coordination-mode.md
.claude/agents/: builder.md  code-reviewer.md  infra.md  prompt-tuner.md  vault-reviewer.md
.claude/hooks/: block-bg-edit-agent.py  block-team-lead-src-edit.py
docs/: Architecture.md  CLI-Commands.md  Installation.md  Live-Dashboard.md  ROADMAP.md  adaptive_endpointing_scope.md  endpoint_signal_contract.md  event_store_design.md  hybrid_stt_scope.md  mail_rehome_flip_runbook.md  multi_instance_pwa_voice_scope.md  n8n-email-filing-instructions.md  n8n-email-workflow-instructions.md  ollama-smoke-test-2026-04-10.md  scribe_ag_scorecard.md  scribe_breach_runbook.md  scribe_enroll_api.md  scribe_retention_destroy_playbook.md  scribe_retention_retrieval_runbook.md  stayc_consent_form_draft.md  stayc_waiting_room_poster_draft.md  v3_1_barge_calibration_scope.md  voice_v0.md
docs/proposals/: distiller-rebuild-team1-stabilize.md  distiller-rebuild-team2-rebuild.md
docs/session-notes/: SESSION-2026-03-26-to-31.md  SESSION-2026-04-02.md  SESSION-2026-04-08.md
scaffold/: CLAUDE.md
scripts/: distiller_rebuild_compare.py  fix_duplicate_embeds.py  install_systemd_units.sh  migrate_2026-05-16_meditations_zettels.py  migrate_2026_05_30_strip_v1_tier_fields.py  migrate_routine_recurring_bills.py  migrate_tier_phase1.py  ollama_smoke_test.py  smoke_contract_parity.py  smoke_curator_scope.py  smoke_janitor_scope.sh
skills/vault-curator/: SKILL.md
skills/vault-distiller/: SKILL.md
src/alfred/: _data.py  _env.py  cli.py  daemon.py  dashboard.py  instance_set.py  orchestrator.py  quickstart.py  subprocess_env.py
tests/: conftest.py  pwa_enroll_harness.mjs  test_archive_agent_sessions.py  test_article_template.py  test_audit_agent_slug_helper.py  test_audit_sweep.py  test_audit_sweep_per_instance_attribution.py  test_author_contents_append.py  test_backend_factory_only_known_backends.py  test_bash_exec.py  test_bash_exec_alfred_allowlist.py  test_brief_config.py  test_brief_daemon_catchup.py  test_brief_dispatch.py  test_brief_operations_quarantine.py  test_brief_peer_digests.py  test_brief_process_hub.py  test_brief_retention_relay.py  test_brief_section_read.py  test_brief_state.py  test_brief_stayc_relay.py  test_brief_tier_section.py  test_brief_upcoming_events.py  test_brief_watches.py  test_brief_weather.py  test_canonical_permissions.py  test_captured_tasks_view.py  test_contract_negotiate_cli.py  test_contracts.py  test_curator_context.py  test_daemon_capture_rotation.py  test_daily_curation.py  test_daily_sync_daemon_catchup.py  test_daily_sync_routine_match_section.py  test_digest_writer.py  test_distiller_alfred_learnings_section.py  test_distiller_attribution.py  test_distiller_backfill.py  test_distiller_body_hash.py  test_distiller_candidates.py  (+256 more)
tests/cloudflared/: test_config.py  test_daemon.py  test_health.py
tests/curator/: __init__.py  _fakes.py  conftest.py  test_idle_tick.py  test_inbox_filter_daemon.py  test_pipeline_attribution.py  test_pipeline_concurrency.py  test_pipeline_errors.py  test_pipeline_stages.py  test_vault_context.py
tests/health/: test_aggregator.py  test_anthropic_auth.py  test_bit.py  test_brief_integration.py  test_brief_probes.py  test_cli_check.py  test_curator_probes.py  test_daily_sync_probes.py  test_distiller_probes.py  test_instructor_probes.py  test_janitor_probes.py  test_kalle_bit_config.py  test_per_tool_core.py  test_per_tool_telemetry.py  test_renderer.py  test_surveyor_probes.py  test_tool_schema_validator.py  test_types.py
tests/integration/: test_canonical_filter.py  test_dual_instance.py  test_peer_route_e2e.py  test_voice_assistant_aiortc.py  test_voice_barge_aiortc.py  test_voice_echo_aiortc.py  test_voice_playout_av.py  test_voice_stt_media.py  test_voice_tts_aiortc.py
tests/integrations/: test_gcal_health.py  test_github_ops.py
tests/mail/: test_extract.py  test_extract_parity.py  test_fetcher_synth.py  test_gmail_filing.py  test_gmail_rehome.py  test_gmail_shadow_parity.py  test_state_and_fetch_logging.py  test_webhook_loopback_bind.py
tests/orchestrator/: __init__.py  _fakes.py  conftest.py  test_auto_start.py  test_cloudflared_autostart.py  test_exit_codes.py  test_parallel_spawn.py  test_runner_entrypoints.py  test_sigterm.py  test_sovereign_propagation.py  test_supervision_79_consistency.py  test_tool_dispatch.py  test_transport_env_injection.py
tests/preferences/: __init__.py  _fixtures.py  test_brief_preference_filter.py  test_cross_instance_filesystem_read.py  test_curator_inbox_filter.py  test_curator_preference_filter.py  test_index_rebuild.py  test_loader.py  test_matcher.py  test_system_block_preferences.py
tests/routine/: _recurrence_oracle.py  test_aggregator.py  test_brief_integration.py  test_cadence.py  test_cli.py  test_cli_items.py  test_config_schema.py  test_due.py  test_match_calibration.py  test_recurrence_differential.py  test_routine_done_confidence.py  test_scope.py  test_undone.py
tests/state/: __init__.py  conftest.py  test_state_roundtrip.py
tests/surveyor/: test_cleanup_alfred_tags.py  test_cleanup_contamination.py  test_cli_entity_linking_scan.py  test_daemon_alfred_tags_text_anchor_gate.py  test_daemon_backfill.py  test_daemon_entity_link.py  test_daemon_entity_link_no_entities_observability.py  test_daemon_moc_suggestion_integration.py  test_daemon_noise_linking.py  test_daemon_startup_sync.py  test_daemon_sub_arc_b_plus_silent_no_op_paths.py  test_daemon_text_anchor_gate.py  test_embedder_batching.py  test_embedder_get_all.py  test_embedder_normalization.py  (+6 more)
web/: .env.local.example  .gitignore  package-lock.json  package.json  playwright.voice.config.ts  tailwind.config.cjs  vitest.config.ts  vitest.setup.ts
(+1068 files in other folders)
