[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "alfred-vault"
version = "0.3.2"
description = "Personal agentic infrastructure. Self-hosted. Always on."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
    "httpx>=0.27",
    "python-frontmatter>=1.1",
    "structlog>=24.0",
    "watchdog>=4.0",
    "rich>=13.0",
    "textual>=0.89",
    # Distiller rebuild (Week 1+): Pydantic validates the non-agentic
    # extractor's JSON output before the deterministic writer runs.
    # Already pulled in transitively by the ``voice`` extra's anthropic
    # SDK, but the base distiller path imports it too — pin explicitly.
    "pydantic>=2.0",
]

[project.optional-dependencies]
temporal = ["temporalio>=1.9.0"]
surveyor = [
    "pymilvus[milvus_lite]>=2.4",
    "scikit-learn>=1.4",
    "leidenalg>=0.10",
    "igraph>=0.11",
    "numpy>=1.26",
    "openai>=1.30",
]
voice = [
    "python-telegram-bot>=21.0",
    "anthropic>=0.40",
    # wk2b c5: ElevenLabs TTS for the /brief audio summary command.
    # The implementation uses httpx directly (no SDK import-time dep in
    # src/), but pinning the official SDK here installs it for users who
    # want to swap to SDK-based calls later without another pip install.
    "elevenlabs>=1.0",
    # Outbound-push transport (c1+): async HTTP server hosted inside the
    # talker daemon, delivering messages from scheduler / brief / other
    # tools via Telegram. aiohttp is lighter than FastAPI and shares
    # the talker's event loop cleanly. Pulled in under ``voice`` because
    # the server only runs when the talker is active.
    "aiohttp>=3.10",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    # Outbound-push transport c2+: needed for aiohttp.test_utils fixtures
    # (``aiohttp_client``) used in tests/test_transport_server.py.
    "pytest-aiohttp>=1.0",
]
test = ["pytest>=8.0", "pytest-asyncio>=0.23"]
# Phase A+ inter-instance comms: Salem queries Andrew's Google Calendar
# (Alfred + primary) for event conflict-check and pushes accepted events
# to the Alfred calendar so they land on his phone. The official Google
# libraries are bulky but well-maintained — better than rolling raw REST
# + custom OAuth refresh. Default-disabled in config; only Salem (or
# future calendar-aware instances like V.E.R.A.) opt in. The ``gcal``
# block in config.yaml is gate-checked before any of these are imported,
# so an instance that doesn't enable GCal pays no import cost.
gcal = [
    "google-auth>=2.30",
    "google-auth-oauthlib>=1.2",
    "google-api-python-client>=2.140",
]
all = [
    "alfred-vault[surveyor]",
    "alfred-vault[temporal]",
    "alfred-vault[voice]",
    "alfred-vault[gcal]",
]

[project.urls]
Homepage = "https://github.com/ssdavidai/alfred"
Repository = "https://github.com/ssdavidai/alfred"

[project.scripts]
alfred = "alfred.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/alfred"]

[tool.hatch.build.targets.sdist]
include = ["src/alfred/", "README.md", "LICENSE"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra"
