[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "alfred-vault"
version = "0.3.2"
description = "Personal agentic infrastructure. Self-hosted. Always on."
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "pyyaml>=6.0",
    "httpx>=0.27",
    "python-frontmatter>=1.1",
    "structlog>=24.0",
    "watchdog>=4.0",
    "rich>=13.0",
    "textual>=0.89",
    # Distiller rebuild (Week 1+): Pydantic validates the non-agentic
    # extractor's JSON output before the deterministic writer runs.
    # Already pulled in transitively by the ``voice`` extra's anthropic
    # SDK, but the base distiller path imports it too — pin explicitly.
    "pydantic>=2.0",
]

[project.optional-dependencies]
temporal = ["temporalio>=1.9.0"]
surveyor = [
    # PINNED 2026-06-25: >=2.4 let the box's fresh install grab pymilvus 3.0 /
    # milvus-lite 3.0 (directory-based), which cannot open the existing 2.5.1
    # file-based (single SQLite) vector DBs — surveyor crash-looped on cutover.
    # Keep this stack matched to the on-disk DB format until a deliberate re-embed.
    "pymilvus[milvus_lite]==2.5.7",
    "milvus-lite==2.5.1",
    "setuptools<81",  # milvus-lite 2.5.1 imports pkg_resources, removed in setuptools 81+
    "scikit-learn>=1.4",
    "leidenalg>=0.10",
    "igraph>=0.11",
    "numpy>=1.26",
    "openai>=1.30",
]
voice = [
    "python-telegram-bot>=21.0",
    "anthropic>=0.40",
    # wk2b c5: ElevenLabs TTS for the /brief audio summary command.
    # The implementation uses httpx directly (no SDK import-time dep in
    # src/), but pinning the official SDK here installs it for users who
    # want to swap to SDK-based calls later without another pip install.
    "elevenlabs>=1.0",
    # Outbound-push transport (c1+): async HTTP server hosted inside the
    # talker daemon, delivering messages from scheduler / brief / other
    # tools via Telegram. aiohttp is lighter than FastAPI and shares
    # the talker's event loop cleanly. Pulled in under ``voice`` because
    # the server only runs when the talker is active.
    "aiohttp>=3.10",
    # 2026-06-06 c1 (PDF document handler): pure-Python PDF text
    # extraction for ``bot.on_document``. The handler routes Telegram
    # ``document`` updates with mime ``application/pdf`` through
    # ``pypdf.PdfReader`` and threads the extracted text into the
    # conversation. Anthropic's native PDF document block is
    # model-family-specific (a quirk-centralisation surface we don't
    # need yet); text extraction is backend-agnostic and works across
    # every model the talker can route to. Lives under ``voice``
    # because the talker is the only consumer — curator / janitor /
    # distiller standalone installs pay no import cost.
    "pypdf>=4.0",
    # 2026-06-06 P8 (universal filetype bundle): adds .docx, .txt, .md,
    # .csv, .ics, and audio (.mp3/.m4a/.wav/.ogg) to the on_document
    # extraction cascade. Per ``feedback_universal_filetype_support.md``
    # (operator-ratified 2026-06-06) all filetype support lives in the
    # shared code path; no per-instance config gate.
    #
    # - ``python-docx`` for .docx walking (paragraph + table extraction)
    # - ``icalendar`` for .ics VEVENT parsing
    # - text/csv use stdlib (utf-8 + BOM sniffing + errors=replace);
    #   audio reuses the existing Groq Whisper STT path so no new dep
    #
    # Both new deps are pure-Python, MIT-licensed, actively maintained.
    "python-docx>=1.0",
    "icalendar>=5.0",
    # STT fallback chain (M1, 2026-06-27): Deepgram as the backup STT behind
    # Groq Whisper. The implementation uses httpx directly (no SDK
    # import-time dep in src/ — mirrors the ElevenLabs convention above, and
    # keeps the regression pins runnable without the SDK installed); pinning
    # the official SDK here installs it for users who want to swap to
    # SDK-based calls later without another pip install.
    "deepgram-sdk>=3.0",
]
# V0 WebRTC voice (PWA voice arc, 2026-07-05): server-side aiortc for the
# browser mic → echo transport. NOTE the extra is named ``webrtc`` NOT
# ``voice`` — ``voice`` is ALREADY the talker stack above (line 43), and
# reusing it would drag av/ffmpeg into every talker install. aiortc pulls
# ``av`` (bundles ffmpeg) + ``aioice`` + ``pylibsrtp``; the ``web.voice``
# config block is gate-checked (enabled + pipeline) BEFORE any lazy import,
# so an instance that doesn't opt in pays zero import cost.
webrtc = ["aiortc>=1.14"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    # Outbound-push transport c2+: needed for aiohttp.test_utils fixtures
    # (``aiohttp_client``) used in tests/test_transport_server.py.
    "pytest-aiohttp>=1.0",
]
test = ["pytest>=8.0", "pytest-asyncio>=0.23"]
# Phase A+ inter-instance comms: Salem queries Andrew's Google Calendar
# (Alfred + primary) for event conflict-check and pushes accepted events
# to the Alfred calendar so they land on his phone. The official Google
# libraries are bulky but well-maintained — better than rolling raw REST
# + custom OAuth refresh. Default-disabled in config; only Salem (or
# future calendar-aware instances like V.E.R.A.) opt in. The ``gcal``
# block in config.yaml is gate-checked before any of these are imported,
# so an instance that doesn't enable GCal pays no import cost.
gcal = [
    "google-auth>=2.30",
    "google-auth-oauthlib>=1.2",
    "google-api-python-client>=2.140",
]
all = [
    "alfred-vault[surveyor]",
    "alfred-vault[temporal]",
    "alfred-vault[voice]",
    "alfred-vault[webrtc]",
    "alfred-vault[gcal]",
]

[project.urls]
Homepage = "https://github.com/ssdavidai/alfred"
Repository = "https://github.com/ssdavidai/alfred"

[project.scripts]
alfred = "alfred.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/alfred"]

[tool.hatch.build.targets.sdist]
include = ["src/alfred/", "README.md", "LICENSE"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra"
