[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "alfred-vault"
version = "0.3.2"
description = "Personal agentic infrastructure. Self-hosted. Always on."
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "pyyaml>=6.0",
    "httpx>=0.27",
    "python-frontmatter>=1.1",
    "structlog>=24.0",
    "watchdog>=4.0",
    "rich>=13.0",
    "textual>=0.89",
    # Distiller rebuild (Week 1+): Pydantic validates the non-agentic
    # extractor's JSON output before the deterministic writer runs.
    # Already pulled in transitively by the ``voice`` extra's anthropic
    # SDK, but the base distiller path imports it too — pin explicitly.
    "pydantic>=2.0",
]

[project.optional-dependencies]
temporal = ["temporalio>=1.9.0"]
# STAY-C sovereign scribe local STT (scribe P2-b). faster-whisper runs
# distil-large-v3 on CPU via CTranslate2 (TORCH-FREE); P0b measured RTF 0.10 /
# WER 2.6% on the target box. Pulls ctranslate2 + onnxruntime (VAD) +
# tokenizers + av — all wheels, no torch. The scribe daemon exits 78 (missing
# deps, no-restart) if this extra isn't installed AND the configured
# stt.provider is a real-model provider (faster-whisper / local-whisper); the
# ``fake`` provider needs no dep (CI + the unconditional fake-backend coverage).
scribe = [
    "faster-whisper>=1.0",
    # STAY-C retention seal (#13, slice 13a/b/c). OPERATOR-RULED backend (2026-07-19, design §3.1):
    # standard **age** X25519 recipient encryption via pyrage. age was chosen over a bespoke/pyca
    # blob because a ~10-year medico-legal archive must be openable with the stock `age` binary
    # WITHOUT this codebase (decade-scale standalone retrieval, the 13d offline-key path). pyrage
    # ships a self-contained Rust wheel (manylinux x86_64 verified), torch-free, so [scribe] stays
    # CI/torch-free. The keygen ceremony + offline-binary decrypt verification are slice 13d.
    "pyrage>=1.1",
]
# STAY-C sovereign scribe multi-speaker diarization (scribe P4). pyannote.audio
# resolves speaker turns on-box (loads its embedding model offline from the local
# HF cache). Pulls TORCH — so this extra is for STAY-C's OWN venv ONLY; install
# torch from the CPU wheel index at build time. NEVER add it to [scribe] or [all]
# (those must stay torch-free for CI + the other instances). The scribe daemon
# exits 78 (missing deps, no-restart) if this extra isn't installed AND
# diarize.provider is ``pyannote``; the ``off`` (default) / ``fake`` providers
# need no dep (CI + the unconditional fake-backend coverage).
scribe-diarize = [
    # Pinned <4: P4-4 MATERIALIZES a repo-id-free pipeline config by rewriting
    # ``pipeline.params.segmentation`` + ``pipeline.params.embedding`` in the
    # speaker-diarization-3.1 config format (scripts.stage_diarize_models). A 4.x
    # pipeline-config format change would break that transform — the materialize
    # validation fail-louds, but the pin keeps the resolved wheel matched to the
    # transform. Bump deliberately alongside a materialize-format review.
    "pyannote.audio>=3.1,<4",
    # Pinned <2.6: torchaudio 2.6 removed ``AudioMetaData`` from the legacy I/O
    # backend, which pyannote.audio 3.x imports → ImportError/AttributeError at
    # engine load. The on-box install (2026-07-13) proved latest (torch/torchaudio
    # 2.13/2.11) breaks the engine; the box pinned 2.5.1+cpu. Keep a RANGE (not an
    # exact pin) matched to pyannote 3.x; bump alongside the pyannote-4 review.
    "torch>=2.2,<2.6",
    "torchaudio>=2.2,<2.6",
]
surveyor = [
    # PINNED 2026-06-25: >=2.4 let the box's fresh install grab pymilvus 3.0 /
    # milvus-lite 3.0 (directory-based), which cannot open the existing 2.5.1
    # file-based (single SQLite) vector DBs — surveyor crash-looped on cutover.
    # Keep this stack matched to the on-disk DB format until a deliberate re-embed.
    "pymilvus[milvus_lite]==2.5.7",
    "milvus-lite==2.5.1",
    "setuptools<81",  # milvus-lite 2.5.1 imports pkg_resources, removed in setuptools 81+
    "scikit-learn>=1.4",
    "leidenalg>=0.10",
    "igraph>=0.11",
    "numpy>=1.26",
    "openai>=1.30",
]
voice = [
    "python-telegram-bot>=21.0",
    "anthropic>=0.40",
    # wk2b c5: ElevenLabs TTS for the /brief audio summary command.
    # The implementation uses httpx directly (no SDK import-time dep in
    # src/), but pinning the official SDK here installs it for users who
    # want to swap to SDK-based calls later without another pip install.
    "elevenlabs>=1.0",
    # Outbound-push transport (c1+): async HTTP server hosted inside the
    # talker daemon, delivering messages from scheduler / brief / other
    # tools via Telegram. aiohttp is lighter than FastAPI and shares
    # the talker's event loop cleanly. Pulled in under ``voice`` because
    # the server only runs when the talker is active.
    "aiohttp>=3.10",
    # 2026-06-06 c1 (PDF document handler): pure-Python PDF text
    # extraction for ``bot.on_document``. The handler routes Telegram
    # ``document`` updates with mime ``application/pdf`` through
    # ``pypdf.PdfReader`` and threads the extracted text into the
    # conversation. Anthropic's native PDF document block is
    # model-family-specific (a quirk-centralisation surface we don't
    # need yet); text extraction is backend-agnostic and works across
    # every model the talker can route to. Lives under ``voice``
    # because the talker is the only consumer — curator / janitor /
    # distiller standalone installs pay no import cost.
    "pypdf>=4.0",
    # 2026-06-06 P8 (universal filetype bundle): adds .docx, .txt, .md,
    # .csv, .ics, and audio (.mp3/.m4a/.wav/.ogg) to the on_document
    # extraction cascade. Per ``feedback_universal_filetype_support.md``
    # (operator-ratified 2026-06-06) all filetype support lives in the
    # shared code path; no per-instance config gate.
    #
    # - ``python-docx`` for .docx walking (paragraph + table extraction)
    # - ``icalendar`` for .ics VEVENT parsing
    # - text/csv use stdlib (utf-8 + BOM sniffing + errors=replace);
    #   audio reuses the existing Groq Whisper STT path so no new dep
    #
    # Both new deps are pure-Python, MIT-licensed, actively maintained.
    "python-docx>=1.0",
    "icalendar>=5.0",
    # STT fallback chain (M1, 2026-06-27): Deepgram as the backup STT behind
    # Groq Whisper. The implementation uses httpx directly (no SDK
    # import-time dep in src/ — mirrors the ElevenLabs convention above, and
    # keeps the regression pins runnable without the SDK installed); pinning
    # the official SDK here installs it for users who want to swap to
    # SDK-based calls later without another pip install.
    "deepgram-sdk>=3.0",
]
# V0 WebRTC voice (PWA voice arc, 2026-07-05): server-side aiortc for the
# browser mic → echo transport. NOTE the extra is named ``webrtc`` NOT
# ``voice`` — ``voice`` is ALREADY the talker stack above (line 43), and
# reusing it would drag av/ffmpeg into every talker install. aiortc pulls
# ``av`` (bundles ffmpeg) + ``aioice`` + ``pylibsrtp``; the ``web.voice``
# config block is gate-checked (enabled + pipeline) BEFORE any lazy import,
# so an instance that doesn't opt in pays zero import cost.
webrtc = ["aiortc>=1.14"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    # Outbound-push transport c2+: needed for aiohttp.test_utils fixtures
    # (``aiohttp_client``) used in tests/test_transport_server.py.
    "pytest-aiohttp>=1.0",
]
test = ["pytest>=8.0", "pytest-asyncio>=0.23"]
# Phase A+ inter-instance comms: Salem queries Andrew's Google Calendar
# (Alfred + primary) for event conflict-check and pushes accepted events
# to the Alfred calendar so they land on his phone. The official Google
# libraries are bulky but well-maintained — better than rolling raw REST
# + custom OAuth refresh. Default-disabled in config; only Salem (or
# future calendar-aware instances like V.E.R.A.) opt in. The ``gcal``
# block in config.yaml is gate-checked before any of these are imported,
# so an instance that doesn't enable GCal pays no import cost.
gcal = [
    "google-auth>=2.30",
    "google-auth-oauthlib>=1.2",
    "google-api-python-client>=2.140",
]
all = [
    "alfred-vault[surveyor]",
    "alfred-vault[temporal]",
    "alfred-vault[voice]",
    "alfred-vault[webrtc]",
    "alfred-vault[gcal]",
    "alfred-vault[scribe]",
]

[project.urls]
Homepage = "https://github.com/ssdavidai/alfred"
Repository = "https://github.com/ssdavidai/alfred"

[project.scripts]
alfred = "alfred.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/alfred"]

[tool.hatch.build.targets.sdist]
include = ["src/alfred/", "README.md", "LICENSE"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra"
